--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "mdzz.github.com",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server",
-    "start": "cross-env NODE_ENV=development node build/dev.js",
-    "build": "cross-env NODE_ENV=production node build/prod.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
-  }
+    "name": "mdzz.github.com",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "webpack-dev-server --colors --hot",
+        "start": "cross-env NODE_ENV=development node build/dev.js",
+        "build": "cross-env NODE_ENV=production node build/prod.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.24.1",
+        "babel-loader": "^7.0.0",
+        "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^0.28.0",
+        "html-webpack-plugin": "^2.28.0",
+        "node-sass": "^4.5.2",
+        "sass-loader": "^6.0.3",
+        "style-loader": "^0.16.1",
+        "webpack": "^2.4.1",
+        "webpack-dev-server": "^2.4.5"
+    }
 }
